--- a/scss/modules/buttons/_classes.scss
+++ b/scss/modules/buttons/_classes.scss
@@ -3,3 +3,20 @@
 // ==============
 
 // Button Classes
+button, .button, input[type=button], input[type=submit] {
+    @extend %button;
+
+    // Sized Button Classes
+    &.tiny { @extend %button-tiny; }   
+    &.small { @extend %button-small; }   
+    &.large { @extend %button-large; }   
+    &.huge { @extend %button-huge; }
+
+    // Positioned Button Classes
+    &.left { @extend %button-left; }
+    &.right { @extend %button-right; }
+
+    // Display Button Classes
+    &.block { @extend %button-block; }
+    &.full { @extend %button-full; }
+}
