Button group styles

--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -236,11 +236,11 @@ input {
 }
 
 /* line 107, ../scss/modules/_layout.scss */
-.halign-center, .full, .full-height, .full-width, .block, .clearfix, .layer, nav.horizontal > ul {
+.halign-center, .full, .full-height, .full-width, .block, .clearfix, .layer, nav.horizontal > ul, .button-group {
   *zoom: 1;
 }
 /* line 38, ../../../Downloads/CodeKit.app/Contents/Resources/engines/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
-.halign-center:after, .full:after, .full-height:after, .full-width:after, .block:after, .clearfix:after, .layer:after, nav.horizontal > ul:after {
+.halign-center:after, .full:after, .full-height:after, .full-width:after, .block:after, .clearfix:after, .layer:after, nav.horizontal > ul:after, .button-group:after {
   content: "";
   display: table;
   clear: both;
@@ -4493,7 +4493,7 @@ nav.tabs + .tabs-content {
   top: 0;
 }
 
-/* line 5, ../scss/modules/buttons/_components.scss */
+/* line 7, ../scss/modules/buttons/_components.scss */
 button.tiny, .button.tiny, input[type=button].tiny, input[type=submit].tiny, button.small, .button.small, input[type=button].small, input[type=submit].small, button.large, .button.large, input[type=button].large, input[type=submit].large, button.huge, .button.huge, input[type=button].huge, input[type=submit].huge, button.left, .button.left, input[type=button].left, input[type=submit].left, button.right, .button.right, input[type=button].right, input[type=submit].right, button.full, .button.full, input[type=button].full, input[type=submit].full, button.block, .button.block, input[type=button].block, input[type=submit].block, button, .button, input[type=button], input[type=submit] {
   display: inline-block;
   padding: 0.5rem 1rem;
@@ -4514,56 +4514,98 @@ button.tiny, .button.tiny, input[type=button].tiny, input[type=submit].tiny, but
   text-decoration: none;
 }
 
-/* line 26, ../scss/modules/buttons/_components.scss */
+/* line 28, ../scss/modules/buttons/_components.scss */
 button.tiny, .button.tiny, input[type=button].tiny, input[type=submit].tiny {
   font-size: 10.2135px ;
   font-size: 0.63834rem ;
   padding: 0.25rem 0.5rem;
 }
 
-/* line 32, ../scss/modules/buttons/_components.scss */
+/* line 34, ../scss/modules/buttons/_components.scss */
 button.small, .button.small, input[type=button].small, input[type=submit].small {
   font-size: 11.86196px ;
   font-size: 0.74137rem ;
   padding: 0.25rem 0.5rem;
 }
 
-/* line 38, ../scss/modules/buttons/_components.scss */
+/* line 40, ../scss/modules/buttons/_components.scss */
 button.large, .button.large, input[type=button].large, input[type=submit].large {
   font-size: 16px ;
   font-size: 1rem ;
   padding: 0.5rem 1rem;
 }
 
-/* line 44, ../scss/modules/buttons/_components.scss */
+/* line 46, ../scss/modules/buttons/_components.scss */
 button.huge, .button.huge, input[type=button].huge, input[type=submit].huge {
   font-size: 18.5824px ;
   font-size: 1.1614rem ;
   padding: 1rem 2rem;
 }
 
-/* line 50, ../scss/modules/buttons/_components.scss */
+/* line 52, ../scss/modules/buttons/_components.scss */
 button.left, .button.left, input[type=button].left, input[type=submit].left {
   float: left;
   margin-left: 0;
 }
 
-/* line 56, ../scss/modules/buttons/_components.scss */
+/* line 58, ../scss/modules/buttons/_components.scss */
 button.right, .button.right, input[type=button].right, input[type=submit].right {
   float: right;
   margin-right: 0;
 }
 
-/* line 62, ../scss/modules/buttons/_components.scss */
+/* line 64, ../scss/modules/buttons/_components.scss */
 button.full, .button.full, input[type=button].full, input[type=submit].full, button.block, .button.block, input[type=button].block, input[type=submit].block {
   display: block;
   margin: 0;
   width: 100%;
 }
 
-/* line 69, ../scss/modules/buttons/_components.scss */
+/* line 71, ../scss/modules/buttons/_components.scss */
 button.full, .button.full, input[type=button].full, input[type=submit].full {
   height: 100%;
+}
+
+/* line 82, ../scss/modules/buttons/_components.scss */
+.button-group > button, .button-group > .button {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  margin: 0;
+  margin-left: -1px;
+  float: left;
+}
+/* line 88, ../scss/modules/buttons/_components.scss */
+.button-group > button:first-of-type, .button-group > .button:first-of-type {
+  margin-left: inherit;
+}
+/* line 89, ../scss/modules/buttons/_components.scss */
+.button-group > button:hover, .button-group > .button:hover, .button-group > button:focus, .button-group > .button:focus {
+  z-index: 2;
+}
+/* line 92, ../scss/modules/buttons/_components.scss */
+.button-group > button:first-of-type, .button-group > .button:first-of-type {
+  -moz-border-radius-topleft: 3px;
+  -webkit-border-top-left-radius: 3px;
+  border-top-left-radius: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+/* line 96, ../scss/modules/buttons/_components.scss */
+.button-group > button:last-of-type, .button-group > .button:last-of-type {
+  -moz-border-radius-topright: 3px;
+  -webkit-border-top-right-radius: 3px;
+  border-top-right-radius: 3px;
+  -moz-border-radius-bottomright: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+/* line 103, ../scss/modules/buttons/_components.scss */
+.button-group > input[type=radio], .button-group > input[type=checkbox] {
+  display: none;
 }
 
 /* line 5, ../scss/modules/forms/_components.scss */
