--- a/scss/modules/buttons/_module.scss
+++ b/scss/modules/buttons/_module.scss
@@ -26,7 +26,7 @@ $button-huge-padding: 1rem 2rem !default;
 $button-huge-scale: $button-scale + 2 !default;
 
 // Button Group Settings
-$button-group-margin: 0 !default;
+$button-group-margin: $button-margin !default;
 
 // Imports
 @import
