--- a/scss/modules/buttons/_classes.scss
+++ b/scss/modules/buttons/_classes.scss
@@ -20,3 +20,11 @@ button, .button, input[type=button], input[type=submit] {
     &.block { @extend %button-block; }
     &.full { @extend %button-full; }
 }
+
+.button-group {
+    @extend %button-group;
+
+    > button, > .button {
+        @extend %button-group-buttons;
+    }
+}
