--- a/scss/modules/buttons/_components.scss
+++ b/scss/modules/buttons/_components.scss
@@ -2,6 +2,8 @@
 // Buttons Components
 // ==================
 
+// Single Buttons
+// --------------
 %button {
     @extend %nowrap;
     display: inline-block;
@@ -72,3 +74,70 @@
     // TODO: vertical alignment middle
 }
 
+// Button Groups
+// -------------
+%button-group {
+    @extend %clearfix;
+
+    > %button-group-buttons {
+        @include border-radius(0);
+        margin: 0;
+        margin-left: -$button-border-width;
+        float: left;
+
+        &:first-of-type { margin-left: inherit; }
+        &:hover, &:focus { z-index: 2; }
+
+        @if $button-radius {
+            &:first-of-type {
+                @include border-top-left-radius($button-radius);
+                @include border-bottom-left-radius($button-radius);
+            }
+            &:last-of-type {
+                @include border-top-right-radius($button-radius);
+                @include border-bottom-right-radius($button-radius);
+            }
+        }
+    }
+
+    > input[type=radio], > input[type=checkbox] {
+        display: none;
+    }
+}
+
+%button-group-inline {
+    @extend %button-group;
+    display: inline-block;
+    margin: $button-group-margin;
+    margin-bottom: 0;
+}
+
+%button-group-vertical {
+    @extend %button-group;
+    display: inline-block;
+
+    > %button-group-buttons {
+        display: block;
+        width: 100%;
+        max-width: 100%;
+        margin: 0;
+        margin-left: 0;
+        margin-top: -$button-border-width;
+        float: none;
+
+        &:first-of-type { margin-left: 0; margin-top: inherit; }
+            
+        @if $button-radius {
+            &:first-of-type {
+                @include border-bottom-left-radius(0);
+                @include border-top-left-radius($button-radius);
+                @include border-top-right-radius($button-radius);
+            }
+            &:last-of-type {
+                @include border-top-right-radius(0);
+                @include border-bottom-left-radius($button-radius);
+                @include border-bottom-right-radius($button-radius);
+            }
+        }
+    }
+}
