--- a/scss/modules/buttons/_components.scss
+++ b/scss/modules/buttons/_components.scss
@@ -11,6 +11,7 @@
     cursor: pointer;
     margin: $button-margin;
     border-width: $button-border-width;
+    border-style: solid;
     white-space: nowrap;
     background-image: none;
 
