--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -24,12 +24,12 @@ $grid-column-gutter: $x !default;
 $grid-row-gutter: $x !default;
 
 // Color Palette
-$color-primary: navy !default;
-$color-secondary: gray !default;
-$color-dark: #222 !default;
+$color-primary: #024959 !default;
+$color-secondary: #E74C30 !default;
+$color-dark: #363636 !default;
 $color-light: #EFEFEF !default;
-$color-gray: #9A9A9A !default;
-$color-gray-light: #F7F7F7 !default;
+$color-gray: #525252 !default;
+$color-gray-light: #ADADAD !default;
 
 $color-success: #96CC69 !default;
 $color-warning: #FFCC5C !default;
