--- a/scss/modules/forms/_module.scss
+++ b/scss/modules/forms/_module.scss
@@ -8,6 +8,8 @@ $form-scale: -1 !default;
 $form-border-width: 1px !default;
 $form-radius: 3px !default;
 $form-padding: 0.5rem !default;
+$form-transition-duration: 0.2s !default;
+$form-transition-timing-function: ease-in-out !default;
 
 // Input Settings
 $form-input-style: default !default;
