--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -106,9 +106,9 @@ $type-subheader-margin-bottom: $x-rem !default;
 // $type-blockquote-cite-color: $type-blockquote-color !default;
 // $type-blockquote-margin-bottom: $x-rem !default;
 
-$type-abbr-border: 1px dotted $color-secondary !default;
-$type-abbr-cursor: help !default;
-$type-abbr-transform: uppercase !default;
+// $type-abbr-border: 1px dotted $color-secondary !default;
+// $type-abbr-cursor: help !default;
+// $type-abbr-transform: uppercase !default;
 
 // Anchor Settings
 $anchor-decoration: none !default;
